Set .story-card > a to inline-block fixes a few odd layout issues

--- a/css/_story-card.scss
+++ b/css/_story-card.scss
@@ -25,7 +25,7 @@
 .story-card > a {
 	background-color: $ultgray;
 	color: $offblack;
-	display: block;
+	display: inline-block;
 	height: 100%;
 	margin: 0;
 	padding: 0;
